# rainbow-refactor

./: .editorconfig  .env.sample  .gitignore  pyproject.toml  readme.md  tailwind.config.js
.upsun/: config.yaml
backend/: .env.sample  .gitignore  pyproject.toml  tailwind.config.js
backend/app/setup/: prettier.py  start.py
backend/scripts/: build.sh  clean.sh  lint_backend.sh  prettier_backend.sh  start.sh  test.sh
backend/upsun_demo_app/: main.py  routes.py
backend/upsun_demo_app/setup/: build.py  clean.py  dev.py  lint.py  process_runner.py
backend/upsun_demo_app/static/css/: main.css  tailwind.css
backend/upsun_demo_app/static/js/web-component/: feature_step.js
backend/upsun_demo_app/templates/: base.html  index.html
backend/upsun_demo_app/templates/component/: intro.html
backend/upsun_demo_app/templates/component/template/web-component/: feature_step.html
backend/upsun_demo_app/templates/layouts/: base.html
backend/upsun_demo_app/templates/partials/: aside.html  header.html  main.html
upsun_demo_app/: main.py  routes.py
upsun_demo_app/setup/: dev.py  lint.py  start.py  test.py
upsun_demo_app/static/css/: main.css  tailwind.css
upsun_demo_app/static/js/web-component/: feature_step.js
upsun_demo_app/templates/: index.html
upsun_demo_app/templates/component/: debugger.html  intro.html  share_button.html
upsun_demo_app/templates/component/feature_steps/: list.html  macros.html
upsun_demo_app/templates/component/feature_steps/content/: 1_deploy_to_upsun.html  2_create_first_preview_environment.html  3_add_redis_to_staging.html  4_merge_to_production.html  5_done.html  running_locally.html
upsun_demo_app/templates/layouts/: base.html
upsun_demo_app/templates/partials/: aside.html  header.html  main.html
