[tool.poetry]
name = "upsun flask demo"
version = "2.0.0"
description = "Deploy this as an Upsun project to start exploring some of the key features of Upsun"
authors = ["Tyler Mills <tyler.mills@platform.sh>"]
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
async-timeout = "4.0.3"
blinker = "1.7.0"
boolean-py = "4.0"
cachecontrol = "0.13.1"
cachelib = "0.13.0"
certifi = "2024.2.2"
charset-normalizer = "3.3.2"
click = "8.1.7"
defusedxml = "0.7.1"
filelock = "3.13.3"
flask = "3.0.0"
flask-cors = "4.0.1"
flask-session = "0.5.0"
gunicorn = "22.0.0"
html5lib = "1.1"
idna = "3.7"
itsdangerous = "2.1.2"
jinja2 = "3.1.4"
markdown-it-py = "3.0.0"
markupsafe = "2.1.3"
mdurl = "0.1.2"
msgpack = "1.0.7"
packaging = "23.2"
py-serializable = "1.0.3"
pygments = "2.17.2"
pyparsing = "3.1.1"
python-dotenv = "1.0.1"
redis = "4.5.4"
rich = "13.7.0"
six = "1.16.0"
sortedcontainers = "2.4.0"
toml = "0.10.2"
urllib3 = "2.2.2"
webencodings = "0.5.1"
werkzeug = "3.0.3"
requests = "^2.32.3"

[tool.poetry.group.dev.dependencies]
cyclonedx-python-lib = "6.4.4"
license-expression = "30.3.0"
packageurl-python = "0.15.0"
pip-api = "0.0.30"
pip-requirements-parser = "32.0.1"
pip-audit = "2.7.2"
pylint = "3.0.3"
black = "24.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
