[tool.poetry]
name = "upsun-demo-app"
version = "2.0.0"
description = "Deploy this as an Upsun project to start exploring some of the key features of Upsun"
authors = ["Tyler Mills <tyler.mills@platform.sh>"]
license = "MIT"
package-mode = false

[tool.poetry.scripts]
app_clean = "upsun_demo_app.setup.clean:main"
app_lint = "upsun_demo_app.setup.lint:main"
app_prettier = "upsun_demo_app.setup.prettier:main"
app_test = "upsun_demo_app.setup.test:main"
app_build = "upsun_demo_app.setup.build:main"
dev-serve = "upsun_demo_app.main:main"
dev-css-watch = "upsun_demo_app.setup.dev:cssWatch"
app = "upsun_demo_app.setup.start:main"

[tool.poetry.dependencies]
tailwind = { path = "./packages/tailwind" }
python = "^3.10"
flask = "3.0.3"
flask-cors = "5.0.0"
python-dotenv = "1.0.1"
gunicorn = "^23.0.0"

[tool.poetry.group.dev.dependencies]
cyclonedx-python-lib = "6.4.4"
license-expression = "30.3.0"
packageurl-python = "0.15.0"
pip-api = "0.0.30"
pip-requirements-parser = "32.0.1"
pip-audit = "2.7.2"
pylint = "3.0.3"
black = "24.4.0"
deptry = "^0.20.0"
livereload = "^2.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.deptry.per_rule_ignores]
DEP002 = ["tailwind"]

